// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup组件 快照测试 基本使用 1`] = `
<div
  className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 kkZacT sinoui-checkbox-group"
>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框1
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={true}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jHLTaR sinoui-checkbox sinoui-checkbox--checked"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <input
        checked={true}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框2
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={true}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jHLTaR sinoui-checkbox sinoui-checkbox--checked"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <input
        checked={true}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框3
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框4
    </span>
  </label>
</div>
`;

exports[`CheckboxGroup组件 快照测试 设置items属性 1`] = `
<div
  className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 kkZacT sinoui-checkbox-group"
>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框1
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框2
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框3
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框4
    </span>
  </label>
</div>
`;

exports[`CheckboxGroup组件 快照测试 设置不可用 1`] = `
Array [
  <p>
    不可用:
  </p>,
  <div
    className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 kkZacT sinoui-checkbox-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 eVndhB sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox sinoui-checkbox--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框1
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 eVndhB sinoui-form-control-label"
      disabled={true}
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox sinoui-checkbox--disabled"
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框2
      </span>
    </label>
  </div>,
  <p>
    只读:
  </p>,
  <div
    className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 kkZacT sinoui-checkbox-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 eVndhB sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox sinoui-checkbox--read-only"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          readOnly={true}
          type="checkbox"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框1
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 eVndhB sinoui-form-control-label"
      readOnly={true}
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox sinoui-checkbox--read-only"
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          readOnly={true}
          type="checkbox"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框2
      </span>
    </label>
  </div>,
]
`;

exports[`CheckboxGroup组件 快照测试 设置是否支持全选 1`] = `
<div
  className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 kkZacT sinoui-checkbox-group"
>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox sinoui-checkboxGroup-select"
      color="primary"
      onClick={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      全选
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框1
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框2
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框3
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框4
    </span>
  </label>
</div>
`;

exports[`CheckboxGroup组件 快照测试 设置是否纵向显示 1`] = `
<div
  className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 gzFqCb sinoui-checkbox-group"
>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框1
    </span>
  </label>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        checked={false}
        className="sinoui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      复选框2
    </span>
  </label>
</div>
`;

exports[`CheckboxGroup组件 快照测试 设置标题显示位置 1`] = `
Array [
  <p>
    标题显示在右侧：
  </p>,
  <div
    className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 kkZacT sinoui-checkbox-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框1
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框2
      </span>
    </label>
  </div>,
  <p>
    标题显示在左侧：
  </p>,
  <div
    className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 iEFRaZ sinoui-checkbox-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 ezKajw sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框1
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 ezKajw sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框2
      </span>
    </label>
  </div>,
]
`;

exports[`CheckboxGroup组件 快照测试 设置网格对齐布局默认3列 1`] = `
Array [
  <p>
    默认：
  </p>,
  <div
    className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 jmUeEf sinoui-checkbox-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框1
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框2
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框3
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框4
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="5"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框5
      </span>
    </label>
  </div>,
  <p>
    设置colums为4：
  </p>,
  <div
    className="FormGroup-sc-1yfjhta-0 CheckboxGroup__FormGroupWrapper-sc-52zwwd-0 elgcxw sinoui-checkbox-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框1
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框2
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框3
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框4
      </span>
    </label>
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 jUfgZR sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button BaseCheckboxButton__BaseToggleButton-sc-13yu3k8-0 jpvRn sinoui-checkbox"
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
        <input
          checked={false}
          className="sinoui-checkbox__input"
          onChange={[Function]}
          type="checkbox"
          value="5"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        复选框5
      </span>
    </label>
  </div>,
]
`;
